# Zepra

./: .gitattributes  .gitignore  AI.md  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Architecture.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestTestfile.cmake  FILETREE.md  GUIDE.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  LICENSE.md  LICENSE_PUBLIC.txt  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SECURITY_MODEL.md  TODO.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  Zepra.sln  build-zepra-core.sh  build.bat  build.sh  build_unified.bat  build_unified.sh  cmake_install.cmake  config_test.vcxproj  config_test.vcxproj.filters  fix_nxrender_docs.py  gemini.md  package-lock.json  package.json  start_browser.bat  zepra.vcxproj  zepra.vcxproj.filters  (+4 more)
.backup_legacy/engine/: CMakeLists.txt  audio_codec_detector.cpp  browser_connector.cpp  dev_tools.cpp  extension_registry.cpp  html_parser.cpp  html_video_element.cpp  video_player.cpp  video_processor.cpp  webkit_engine.cpp
UI/: CMakeLists.txt
UI/browser/: context_menu.cpp  context_menu.h  dropdown.cpp  dropdown.h  navbar.cpp  navbar.h  searchbox.cpp  searchbox.h  sidebar.cpp  sidebar.h  tab_manager.cpp  tab_manager.h  window.cpp  window.h
UI/common/: browser_ui_components.h  zepra_ui.h
UI/devtools/: dev_tools_ui.cpp  dev_tools_ui.h
UI/panels/: ai_chat_window.cpp  ai_chat_window.h  zepra_webview.h  zepra_webview_icons.h  zepra_webview_panel.cpp  zepra_webview_panel.h
UI/settings/: auth_ui.cpp  auth_ui.h  extension_manager_ui.cpp  extension_manager_ui.h  privacy_settings_ui.cpp  settings_ui.cpp  settings_ui.h
crawler/: CMakeLists.txt
source/devtools/: CMakeLists.txt  devtools_integration.cpp  devtools_integration.hpp  vm_bridge.hpp
source/devtools/examples/: devtools_advanced.cpp  devtools_pro.cpp  devtools_realvm.cpp  devtools_ultimate.cpp
source/devtools/src/: console_panel.cpp  devtools_integration.cpp  devtools_window.cpp  elements_panel.cpp  memory_panel.cpp  network_panel.cpp  performance_panel.cpp  sources_panel.cpp
source/devtools/test/: devtools_test.cpp
source/integration/: CMakeLists.txt  browser_context.cpp  dom_bridge.cpp  nxsvg.h  reox_nxrender_bridge.h  stb_image.h  webcore_integration.cpp  zepra_browser.cpp
source/integration/include/: browser_components.h  nxfont.h  nximage_stub.h  nxrender_layout_bridge.h  nxsvg.h  nxsvg_wrapper.h  webcore_bridge.h
source/integration/src/: browser_context.cpp  dom_bridge.cpp  nxrender_ffi_stubs.h  reox_browser_runtime.h  reox_integration.cpp  reox_nxrender_bridge.h  webcore_integration.cpp  zepra_browser.cpp
source/integration/stubs/: link_stubs.cpp  webgl_stubs.cpp
source/networking/: CMakeLists.txt  Makefile  cmake_install.cmake  http.h  http_client.cpp  monitored_http.h
source/networking/network/: monitored_http.cpp  network_monitor.cpp
source/networking/src/: cookie_manager.cpp  dns_resolver.cpp  http_cache.cpp  http_client.cpp  http_request.cpp  http_response.cpp  resource_loader.cpp  ssl_context.cpp  websocket_client.cpp
source/nxbase/: CMakeLists.txt  arena.cpp  file_io.cpp  hashmap.cpp  nxbase.h  timer.cpp
source/nxhttp/: CMakeLists.txt  client.cpp
source/nxjson/: CMakeLists.txt  nxjson.h  pointer.cpp
source/nxrender/: Cargo.toml
source/nxrender-cpp/: CMakeLists.txt  nxrender.cpp  nxrender_c_bridge.cpp  nxrender_c_bridge.h  nxrender_cpp.h
source/nxrender-cpp/accessibility/: a11y_bridge.cpp  a11y_bridge.h  accessibility_tree.cpp  accessibility_tree.h  accessible.cpp  accessible.h
source/nxrender-cpp/animation/: animator.cpp  animator.h  css_animation.cpp  css_animation.h  easing.h  interpolators.h  keyframe.cpp  keyframe.h  scroll_physics.cpp  scroll_physics.h  spring.cpp  spring.h  transition.cpp  transition.h
source/nxrender-cpp/core/: compositor.cpp  compositor.h  damage_tracker.cpp  damage_tracker.h  display_list.cpp  display_list.h  frame_scheduler.cpp  frame_scheduler.h  layer.h  layer_tree_host.cpp  layer_tree_host.h  memory_pool.h  render_pipeline.cpp  render_pipeline.h  render_tile.cpp  render_tile.h  resource_cache.cpp  resource_cache.h  surface.cpp  surface.h  tile_manager.cpp  tile_manager.h
source/nxrender-cpp/input/: clipboard.cpp  clipboard.h  events.h  focus_manager.cpp  focus_manager.h  gesture_recognizer.cpp  gesture_recognizer.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
source/nxrender-cpp/layout/: block_layout.cpp  block_layout.h  constraints.h  container_query.cpp  container_query.h  flexbox.cpp  flexbox.h  float_manager.h  grid.cpp  grid.h  inline_layout.cpp  layout.h  layout_input.h  line_layout.h  multi_column.cpp  multi_column.h  positioned_layout.cpp  positioned_layout.h  scroll_snap.cpp  scroll_snap.h  stacking_context.cpp  stacking_context.h  table_layout.cpp  table_layout.h  writing_mode.h
source/nxrender-cpp/media/: media_element.cpp  media_element.h  media_pipeline.cpp  media_pipeline.h
source/nxrender-cpp/nxgfx/: batch_renderer.cpp  batch_renderer.h  clip_stack.cpp  clip_stack.h  color.cpp  color.h  context.cpp  context.h  context3d.cpp  context3d.h  filter_pipeline.cpp  filter_pipeline.h  gradient.cpp  gradient.h  image_decoder.cpp  image_decoder.h  primitives.h  render_target.cpp  render_target.h  shader.cpp  shader.h  svg.h  text.cpp  text.h  texture_atlas.cpp  texture_atlas.h
source/nxrender-cpp/nxpdf/: nx_pdf.cpp  nx_pdf.h  nx_pdf_backend.h
source/nxrender-cpp/platform/: display_info.cpp  display_info.h  linux_wayland.cpp  linux_wayland.h  linux_x11.cpp  platform.h  platform_timer.cpp  thread_pool.h  (+2 more)
source/nxxml/: CMakeLists.txt  mutation.cpp  nxxml.h  selector.cpp
source/webCore/: CMakeLists.txt
source/webGpu/: CMakeLists.txt
source/zepraEngine/: CMakeLists.txt
source/zepraScript/: CMakeLists.txt  DEVTOOL.md  GEMINI.md  TODO.md  architecture.md  expremital.md  zepra_api.hpp
src/browser_core/: CMakeLists.txt
src/nxvideo/: CMakeLists.txt  nxvideo.pc.in
tools/: CMakeLists.txt  README.md  test_css.html  zepra_demo.cpp
tools/zepracoretest/: README.md  main_orchestrator.py  requirements.txt  run_workflow.bat  run_workflow.sh
(+1813 files in other folders)
